--- a/cocktail_yeda.html
+++ b/cocktail_yeda.html
@@ -26,7 +26,7 @@
     <div id="container">
         <header>
             <!--קישור לדף עצמו כדי להתחיל את המשחק מחדש בלחיצה על הלוגו-->
-            <a href="indextest.html">
+            <a href="cocktail_yeda.html">
                 <img id="logo" src="images/logo.png"/> <!--הלוגו של המשחק שלכם-->
                 <p>קוקטייל הידע</p>
             </a>
