--- a/cocktail_yeda.html
+++ b/cocktail_yeda.html
@@ -27,10 +27,11 @@
         <header>
             <!--קישור לדף עצמו כדי להתחיל את המשחק מחדש בלחיצה על הלוגו-->
             <a href="cocktail_yeda.html">
-                <img id="logo" src="images/logo.png"/> <!--הלוגו של המשחק שלכם-->
-                <p>קוקטייל הידע</p>
+                <!--הלוגו של המשחק שלכם-->
+                <img id="logo" src="images/logo.png" /><p>קוקטייל הידע</p>
             </a>
             <!--תפריט הניווט בראש העמוד-->
+            
             <nav>
                 <ul>
                     <li><a class="about">אודות</a></li>
